--- a/pom.xml
+++ b/pom.xml
@@ -6,40 +6,23 @@
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>my-app</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-
+ <url>http://maven.apache.org</url>
 <scm>
-        <connection>scm:git:https://github.com/xiguan513/java-maven-junit-helloworld</connection>
-        <url>项目git地址（不加'.git后缀'）</url>
-        <developerConnection>scm:项目git地址</developerConnection>
- </scm> 
+    <developerConnection>scm:git:https://songbing513@163.com:1234@qwer@github.com/xiguan513/java-maven-junit-helloworld.git</developerConnection>
+</scm> 
 
  <!--构建配置-->
  <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5.3</version>
-                <configuration>
-                    <tagNameFormat>v@{project.version}</tagNameFormat>
-                    <autoVersionSubmodules>true</autoVersionSubmodules>
+		<configuration>
+        　　		<username>songbing513@163.com</username>
+        　　		<password>1234@qwer</password>
+        　　		<tagBase>https://github.com/xiguan513/java-maven-junit-helloworld.git</tagBase>
+        　　		<releaseProfiles>release</releaseProfiles>
                 </configuration>
             </plugin>
         </plugins>
