--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
   <packaging>jar</packaging>
-  <version>161.0.0</version>
+  <version>161.0.1-SNAPSHOT</version>
   <name>my-app</name>
  <url>http://maven.apache.org</url>
 <scm>
