--- a/pom.xml
+++ b/pom.xml
@@ -3,30 +3,14 @@
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
   <packaging>jar</packaging>
-  <version>1.0</version>
+  <version>0.1-SNAPSHOT</version>
   <name>my-app</name>
  <url>http://maven.apache.org</url>
 <scm>
-    <developerConnection>scm:git:https://songbing513@163.com:1234@qwer@github.com/xiguan513/java-maven-junit-helloworld.git</developerConnection>
+    <developerConnection>scm:git:git@github.com:xiguan513/java-maven-junit-helloworld.git</developerConnection>
   <tag>my-app-1.0</tag>
   </scm> 
 
- <!--构建配置-->
- <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.3</version>
-		<configuration>
-        　　		<username>songbing513@163.com</username>
-        　　		<password>1234@qwer</password>
-        　　		<tagBase>https://github.com/xiguan513/java-maven-junit-helloworld.git</tagBase>
-        　　		<releaseProfiles>release</releaseProfiles>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
    
     <!--分发配置-->
     <distributionManagement>
