--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
   <packaging>jar</packaging>
-  <version>0.3</version>
+  <version>0.4-SNAPSHOT</version>
   <name>my-app</name>
  <url>http://maven.apache.org</url>
 <scm>
     <developerConnection>scm:git:git@github.com:xiguan513/java-maven-junit-helloworld.git</developerConnection>
-  <tag>my-app-0.3</tag>
+  <tag>my-app-1.0</tag>
   </scm> 
 
    
