--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
  <url>http://maven.apache.org</url>
 <scm>
     <developerConnection>scm:git:git@github.com:xiguan513/java-maven-junit-helloworld.git</developerConnection>
-  <tag>162.0.3-dev</tag>
+  <tag>my-app-1.0</tag>
   </scm> 
 
 <build>
